--- a/say-something.html
+++ b/say-something.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Contact Me
-cover: /assets/images/covers/2.jpg
+title: Say something
+cover: /assets/images/covers/say-something.jpeg
 ---
 
 <!--
